lab3/iptables.rules
*filter
:INPUT DROP [34:5345]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 ! -i lo -j DROP

-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# ACCEPT ssh
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT

# ACCEPT dns from local network
-A INPUT -p tcp --dport 53 -s 192.168/16 -j ACCEPT
-A INPUT -p udp --dport 53 -s 192.168/16 -j ACCEPT
-A OUTPUT -p udp --sport 53 -d 192.168/16 -j ACCEPT

# ACCEPT http from everywhere
-A INPUT -p tcp --dport 80 -j ACCEPT

# ACCEPT ftp from everywhere
-A INPUT -p tcp --dport 21 -j ACCEPT

# ACCEPT ping from host machine (the one running the virtual machine)
-A INPUT -p icmp --icmp-type echo-request -s 192.168.5.10 -j ACCEPT
-A OUTPUT -p icmp --icmp-type echo-reply -d 192.168.5.10 -j ACCEPT

# ACCEPT telnet from host machine (the one running the virtual machine)
-A INPUT -p tcp --dport 23 -s 192.168.5.10 -j ACCEPT

# REJECT everything else with icmp-port-unreachable
-A INPUT -j REJECT --reject-with icmp-port-unreachable

COMMIT
